build-deploy/kubernetes/memorias-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: memorias
  name: memorias
spec:
  replicas: 1
  selector:
    matchLabels:
     app: memorias        
  template:
    metadata:            
      labels:
        app: memorias        
    spec:
      containers:
        - name: memorias
          image: cientopolis/memorias:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
