build-deploy/kubernetes/mongo-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-memorias  
spec:
  podManagementPolicy: Parallel
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mongo-memorias
  serviceName: mongo-memorias
  template:
    metadata:      
      labels:
        app: mongo-memorias
    spec:
      containers:
        - image: 'mongo'
          imagePullPolicy: IfNotPresent          
          name: mongo-memorias
#          env: 
#            - name: MONGO_INITDB_ROOT_USERNAME
#              value: admin
#           - name: MONGO_INITDB_ROOT_PASSWORD
#              value: password
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - mountPath: /data/db
              name: mongo-memorias
  volumeClaimTemplates:
    - metadata:        
        name: mongo-memorias
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 0.5Gi
