build-deploy/kubernetes/memorias-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memorias
spec:
  rules:
    - host: memorias.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memorias
                port:
                  number: 8080
